nust add to avoid crash
Signed-off-by: clyfly <deni@xyradcloud.my.id>

--- a/config_sample.env
+++ b/config_sample.env
@@ -35,8 +35,8 @@ RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://gitlab.com/heyradrepo/leechbot.git"
+UPSTREAM_BRANCH = "master"
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
@@ -51,7 +51,7 @@ THUMBNAIL_LAYOUT = ""
 MEGA_EMAIL = ""
 MEGA_PASSWORD = ""
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "100"
 BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
