--- a/config_sample.env
+++ b/config_sample.env
@@ -35,7 +35,7 @@ RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # Update
-UPSTREAM_REPO = "https://gitlab.com/heyradrepo/leechbot.git"
+UPSTREAM_REPO = "https://github.com/radinkaputri/hk2"
 UPSTREAM_BRANCH = "master"
 # Leech
 LEECH_SPLIT_SIZE = ""
